--- a/ios/placesFeatures/Info.plist
+++ b/ios/placesFeatures/Info.plist
@@ -53,5 +53,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	 <key>NSPhotoLibraryUsageDescription</key>
+        <string>$(Places Features) would like access to your photo gallery</string>
+        <key>NSCameraUsageDescription</key>
+        <string>$(Places Features) would like to use your camera</string>
+        <key>NSPhotoLibraryAddUsageDescription</key>
+        <string>$(Places Features) would like to save photos to your photo gallery</string>
+
+
 </dict>
 </plist>
