--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-fs": "^2.16.2",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-image-picker": "^2.2.0",
+    "react-native-maps": "0.26.1",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.29",
